--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is microservice that allows user to create, edit, delete, get, and flag comments and replies",
   "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "lint": "eslint \"./**/*.js\"",
+    "lint:fix": "eslint --fix \"./**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -31,5 +33,11 @@
     "jest": "^26.1.0",
     "mongoose": "^5.9.20",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5"
   }
 }
